--- a/nextjs/styles/globals.css
+++ b/nextjs/styles/globals.css
@@ -10,6 +10,16 @@
 body {
   color: rgb(var(--foreground-rgb));
   background: rgb(var(--background-rgb));
+  @apply h-full;
+}
+html {
+  @apply h-full;
+}
+div#__next {
+  @apply h-full;
+}
+main {
+  @apply h-full;
 }
 
 @layer utilities {
